EXP without battle can be shared now